[package]
name = "serde_yaml"
version = "0.9.35"
authors = ["David Tolnay <dtolnay@gmail.com>", "Peter Jaeckel <peter@hapetech.de>"]
categories = ["encoding", "parser-implementations"]
description = "YAML data format for Serde"
documentation = "https://docs.rs/serde_yaml/"
edition = "2021"
keywords = ["yaml", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapejot/serde-yaml"
rust-version = "1.64"

[dependencies]
indexmap = "2.2.*"
itoa = "1.*"
ryu = "1.*"
serde = "1.*"
unsafe-libyaml = "0.2.*"

[dev-dependencies]
anyhow = "1.*"
indoc = "2.*"
serde_derive = "1.*"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
